# distributed-systems

./: .gitignore
cuda/: CMakeLists.txt  main.cu
openmp/: CMakeLists.txt  main.cpp
sequence/: CMakeLists.txt  main.cpp
